feat(DeleteWarningWindow): Finished Delete function and wrote tests for create, delete and edit game